[package]
name = "sqnz"
version = "0.1.0"
authors = ["Kenny Levinsen <kl@kl.wtf>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
